--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-image">
-    <img src="WhatsApp Image 2025-09-09 at 19.56.39_df7a1d3f.jpg" alt="Keyza">
+    <img src="./WhatsApp Image 2025-09-09 at 19.56.39_df7a1d3f.jpg" alt="Keyza">
 </div>
 
             <div class="hero-content">
@@ -1058,4 +1058,5 @@ scrollSections.forEach(el => el.classList.add('scroll-animate'));
 
     </script>
 </body>
+
 </html>
