--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                     <p>Selain coding, saya juga menikmati proses desain UI/UX dan percaya bahwa kolaborasi antara desain dan development adalah kunci untuk menciptakan produk digital yang sukses.</p>
                 </div>
                 <div class="about-image">
-                    <img src="WhatsApp Image 2025-09-09 at 19.56.39_df7a1d3f.jpg" alt="Keyza">
+                    <img src="./WhatsApp Image 2025-09-09 at 19.56.39_df7a1d3f.jpg" alt="Keyza">
                 </div>
             </div>
         </div>
@@ -1060,3 +1060,4 @@ scrollSections.forEach(el => el.classList.add('scroll-animate'));
 </body>
 
 </html>
+
