--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/keyzavexiaunzila9-sketch"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.instagram.com/kyzavxia/"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -1060,4 +1060,5 @@ scrollSections.forEach(el => el.classList.add('scroll-animate'));
 </body>
 
 </html>
+
 
